if BlenderQUICKTIME
  quicktimedir = quicktime
else
  quicktimedir = 
endif

LIBS =

SUBDIRS = blenloader deflate inflate \
	writestreamglue readstreamglue writeblenfile readblenfile \
	avi imbuf img render radiosity blenlib blenkernel blenpluginapi \
	python makesdna src renderconverter $(quicktimedir) yafray

EXTRA_DIST = \
	include/BDR_drawaction.h \
	include/BDR_drawmesh.h \
	include/BDR_drawobject.h \
	include/BDR_editcurve.h \
	include/BDR_editface.h \
	include/BDR_editmball.h \
	include/BDR_editobject.h \
	include/BDR_isect.h \
	include/BDR_vpaint.h \
	include/BIF_butspace.h \
	include/BIF_drawimage.h \
	include/BIF_drawoops.h \
	include/BIF_drawscene.h \
	include/BIF_drawseq.h \
	include/BIF_drawtext.h \
	include/BIF_editarmature.h \
	include/BIF_editconstraint.h \
	include/BIF_editdeform.h \
	include/BIF_editfont.h \
	include/BIF_editgroup.h \
	include/BIF_editika.h \
	include/BIF_editkey.h \
	include/BIF_editlattice.h \
	include/BIF_editmesh.h \
	include/BIF_editnla.h \
	include/BIF_editoops.h \
	include/BIF_editsca.h \
	include/BIF_editseq.h \
	include/BIF_editsima.h \
	include/BIF_editsound.h \
	include/BIF_editview.h \
	include/BIF_fsmenu.h \
	include/BIF_gl.h \
	include/BIF_glutil.h \
	include/BIF_graphics.h \
	include/BIF_imasel.h \
	include/BIF_interface.h \
	include/BIF_keyval.h \
	include/BIF_mainqueue.h \
	include/BIF_mywindow.h \
	include/BIF_oops.h \
	include/BIF_poseobject.h \
	include/BIF_previewrender.h \
	include/BIF_renderwin.h \
	include/BIF_resources.h \
	include/BIF_scrarea.h \
	include/BIF_screen.h \
	include/BIF_space.h \
	include/BIF_spacetypes.h \
	include/BIF_tbcallback.h \
	include/BIF_toets.h \
	include/BIF_toolbox.h \
	include/BIF_usiblender.h \
	include/BIF_writeavicodec.h \
	include/BIF_writeimage.h \
	include/BIF_writemovie.h \
	include/BPI_script.h \
	include/BSE_buttons.h \
	include/BSE_drawimasel.h \
	include/BSE_drawipo.h \
	include/BSE_drawnla.h \
	include/BSE_drawoops.h \
	include/BSE_drawview.h \
	include/BSE_edit.h \
	include/BSE_editaction.h \
	include/BSE_editaction_types.h \
	include/BSE_editipo.h \
	include/BSE_editipo_types.h \
	include/BSE_editnla_types.h \
	include/BSE_filesel.h \
	include/BSE_headerbuttons.h \
	include/BSE_sequence.h \
	include/BSE_trans_types.h \
	include/BSE_types.h \
	include/BSE_view.h \
	include/LOD_DependKludge.h \
	include/TPT_DependKludge.h \
	include/blendef.h \
	include/butspace.h \
	include/datatoc.h \
	include/editlattice_ext.h \
	include/interface.h \
	include/ipo.h \
	include/keyed_functions.h \
	include/license_key.h \
	include/mydevice.h \
	include/nla.h \
	include/objfnt.h \
	include/particle_effect.h \
	include/playanim_ext.h
