EXTRA_DIST = Makefile \
             winblender.ico \
             winblender.rc \
             winblenderfile.ico \
             wincreator.ico \
             wincreator.rc \
             winlockedfile.ico \
             winplayer.ico \
             winplayer.rc \
             winpublisher.ico \
             winpublisher.rc
