LIBS =

EXTRA_DIST = \
	VRMLmain.py \
	blenderos.py \
	Blender/BGL.py \
	Blender/Camera.py \
	Blender/Draw.py \
	Blender/Image.py \
	Blender/Ipo.py \
	Blender/Lamp.py \
	Blender/Material.py \
	Blender/Mesh.py \
	Blender/NMesh.py \
	Blender/Object.py \
	Blender/Scene.py \
	Blender/Text.py \
	Blender/Types.py \
	Blender/Window.py \
	Blender/World.py \
	Blender/__init__.py \
	Blender/shadow.py \
	Blender/sys.py \
	Converter/__init__.py \
	Converter/bimporter.py \
	Converter/importloader.py \
	Converter/importer/VRMLimporter.py \
	Converter/importer/__init__.py \
	TextTools/TextTools.py \
	TextTools/__init__.py \
	TextTools/Constants/Sets.py \
	TextTools/Constants/TagTables.py \
	TextTools/Constants/__init__.py \
	TextTools/mxTextTools/__init__.py \
	beta/Objects.py \
	beta/Scenegraph.py \
	beta/__init__.py \
	mcf/__init__.py \
	mcf/utils/__init__.py \
	mcf/utils/collapse.py \
	mcf/utils/copy_extend.py \
	mcf/utils/cpickle_extend.py \
	mcf/utils/dictbool.py \
	mcf/utils/dsort.py \
	mcf/utils/dummy.py \
	mcf/utils/err.py \
	mcf/utils/extpkl.py \
	mcf/utils/fileassociation.py \
	mcf/utils/findourfile.py \
	mcf/utils/hier_rx.py \
	mcf/utils/hierdummy.py \
	mcf/utils/hierobj.py \
	mcf/utils/in_place_ops.py \
	mcf/utils/namespace.py \
	mcf/utils/quote.py \
	mcf/utils/rangeval.py \
	mcf/utils/regutils_ex.py \
	mcf/utils/reloader.py \
	mcf/utils/singletonlist.py \
	mcf/utils/tempclassmodule.py \
	mcf/utils/typeclasses.py \
	mcf/utils/userquery.py \
	mcf/utils/ver.py \
	mcf/utils/walkerable.py \
	simpleparse/__init__.py \
	simpleparse/bootstrap.py \
	simpleparse/generator.py \
	util/__init__.py \
	util/quat.py \
	util/tree.py \
	util/vect.py \
	util/vectools.py \
	vrml/__init__.py \
	vrml/basenodes.py \
	vrml/fieldcoercian.py \
	vrml/loader.py \
	vrml/parser.py \
	vrml/scenegraph.py \
	vrml/utils/__init__.py \
	vrml/utils/collapse.py \
	vrml/utils/err.py \
	vrml/utils/namespace.py \
	vrml/utils/typeclasses.py
