noinst_LTLIBRARIES = libblender_avi.la

LIBS =

libblender_avi_la_SOURCES= \
	AVI_avi.h \
	intern/avi.c \
	intern/avi_intern.h \
	intern/avirgb.c \
	intern/avirgb.h \
	intern/codecs.c \
	intern/endian.c \
	intern/endian.h \
	intern/mjpeg.c \
	intern/mjpeg.h \
	intern/options.c \
	intern/rgb32.c \
	intern/rgb32.h

INCLUDES = -I$(top_srcdir)/intern/guardedalloc

EXTRA_DIST = \
	Makefile \
	intern/Makefile
