noinst_LIBRARIES = libblender_blenkernel.la

libblender_blenkernel_la_SOURCES = \
	intern/constraint.c \
	intern/group.c \
	intern/material.c \
	intern/sca.c \
	intern/world.c \
	intern/curve.c \
	intern/ika.c \
	intern/mball.c \
	intern/scene.c \
	intern/writeavi.c \
	intern/action.c \
	intern/deform.c \
	intern/image.c \
	intern/mesh.c \
	intern/screen.c \
	intern/anim.c \
	intern/displist.c \
	intern/ipo.c \
	intern/nla.c \
	intern/sound.c \
	intern/armature.c \
	intern/effect.c \
	intern/key.c \
	intern/object.c \
	intern/subsurf.c \
	intern/blender.c \
	intern/exotic.c \
	intern/lattice.c \
	intern/packedFile.c \
	intern/text.c \
	intern/bmfont.c \
	intern/font.c \
	intern/library.c \
	intern/property.c \
	intern/texture.c

INCLUDES = -I$(top_srcdir)/intern/guardedalloc \
	-I$(top_srcdir)/source/blender/include \
	-I$(top_srcdir)/source/blender/blenlib \
	-I$(top_srcdir)/source/blender/makesdna \
	-I$(top_srcdir)/source/blender/bpython/include \
	-I$(top_srcdir)/source/blender/render/extern/include \
	-I$(top_srcdir)/source/blender/imbuf \
	-I$(top_srcdir)/source/blender/avi \
	-I$(top_srcdir)/intern/iksolver/extern \
	-I$(top_srcdir)/source/blender/blenloader
