noinst_LTLIBRARIES = libblender_blenlib.la

libblender_blenlib_la_SOURCES = \
	intern/arithb.c \
	intern/dynlib.c \
	intern/fileops.c \
	intern/gsqueue.c \
	intern/matrixops.c \
	intern/noise.c \
	intern/psfont.c \
	intern/rand.c \
	intern/rct.c \
	intern/scanfill.c \
	intern/storage.c \
	intern/time.c \
	intern/util.c \
	intern/vectorops.c \
	intern/winstuff.c

INCLUDES = -I$(top_srcdir)/source/blender/makesdna \
	-I$(top_srcdir)/intern/guardedalloc
