noinst_LTLIBRARIES = libblender_blenlib.la

libblender_blenlib_la_SOURCES = \
	intern/BLI_dynstr.c \
	intern/BLI_ghash.c \
	intern/BLI_linklist.c \
	intern/BLI_memarena.c \
	intern/arithb.c \
	intern/dynlib.c \
	intern/fileops.c \
	intern/gsqueue.c \
	intern/matrixops.c \
	intern/noise.c \
	intern/psfont.c \
	intern/rand.c \
	intern/rct.c \
	intern/scanfill.c \
	intern/storage.c \
	intern/time.c \
	intern/util.c \
	intern/vectorops.c \
	intern/winstuff.c

INCLUDES = -I$(top_srcdir)/source/blender/makesdna \
	-I$(top_srcdir)/intern/guardedalloc
