noinst_LTLIBRARIES = libblender_blenlib.la

LIBS =

libblender_blenlib_la_SOURCES = \
	BLI_arithb.h \
	BLI_blenlib.h \
	BLI_dynstr.h \
	BLI_editVert.h \
	BLI_ghash.h \
	BLI_gsqueue.h \
	BLI_linklist.h \
	BLI_memarena.h \
	BLI_rand.h \
	BLI_storage_types.h \
	BLI_vfontdata.h \
	BLI_winstuff.h \
	MTC_matrixops.h \
	MTC_vectorops.h \
	PIL_dynlib.h \
	PIL_time.h \
	intern/BLI_callbacks.h \
	intern/BLI_dynstr.c \
	intern/BLI_fileops.h \
	intern/BLI_ghash.c \
	intern/BLI_linklist.c \
	intern/BLI_memarena.c \
	intern/BLI_scanfill.h \
	intern/BLI_storage.h \
	intern/BLI_util.h \
	intern/arithb.c \
	intern/dynlib.c \
	intern/fileops.c \
	intern/gsqueue.c \
	intern/matrixops.c \
	intern/noise.c \
	intern/psfont.c \
	intern/rand.c \
	intern/rct.c \
	intern/scanfill.c \
	intern/storage.c \
	intern/time.c \
	intern/util.c \
	intern/vectorops.c \
	intern/winstuff.c

INCLUDES = -I$(top_srcdir)/source/blender/makesdna \
	-I$(top_srcdir)/intern/guardedalloc

EXTRA_DIST = \
	Makefile \
	intern/Makefile
