noinst_LIBRARIES = libblender_encrypt.a

libblender_encrypt_a_SOURCES = \
		intern/BLO_encrypt.c


INCLUDES = -I$(top_srcdir)/source/kernel/gen_messaging -I$(top_srcdir)/intern/keymaker -I$(top_srcdir)/source/blender/writestreamglue -I$(top_srcdir)/source/blender/readstreamglue -I$(top_srcdir)/source/blender/decrypt
