noinst_LIBRARIES = libblender_imbuf.a

libblender_imbuf_a_SOURCES = \
		intern/allocimbuf.c \
		intern/amiga.c \
		intern/anim.c \
		intern/antialias.c \
		intern/bitplanes.c \
		intern/bmp_decode.c \
		intern/cmap.c \
		intern/cspace.c \
		intern/data.c \
		intern/dither.c \
		intern/divers.c \
		intern/filter.c \
		intern/ham.c \
		intern/hamx.c \
		intern/iff.c \
		intern/imageprocess.c \
		intern/iris.c \
		intern/jpeg.c \
		intern/png_decode.c \
		intern/png_encode.c \
		intern/readimage.c \
		intern/rectop.c \
		intern/rotate.c \
		intern/scaling.c \
		intern/targa.c \
		intern/util.c \
		intern/writeimage.c

INCLUDES = -I$(top_srcdir)/source/blender/makesdna -I$(top_srcdir)/intern/guardedalloc -I$(top_srcdir)/source/blender/blenlib -I$(top_srcdir)/source/blender/avi