noinst_LTLIBRARIES = libblender_imbuf.la

LIBS =

libblender_imbuf_la_SOURCES = \
	IMB_imbuf.h \
	IMB_imbuf_types.h \
	intern/IMB_allocimbuf.h \
	intern/IMB_amiga.h \
	intern/IMB_bitplanes.h \
	intern/IMB_bmp.h \
	intern/IMB_cmap.h \
	intern/IMB_divers.h \
	intern/IMB_filter.h \
	intern/IMB_ham.h \
	intern/IMB_hamx.h \
	intern/IMB_iff.h \
	intern/IMB_iris.h \
	intern/IMB_jpeg.h \
	intern/IMB_png.h \
	intern/IMB_targa.h \
	intern/allocimbuf.c \
	intern/amiga.c \
	intern/anim.c \
	intern/antialias.c \
	intern/bitplanes.c \
	intern/bmp_decode.c \
	intern/cmap.c \
	intern/cspace.c \
	intern/data.c \
	intern/dither.c \
	intern/divers.c \
	intern/filter.c \
	intern/ham.c \
	intern/hamx.c \
	intern/iff.c \
	intern/imageprocess.c \
	intern/imbuf.h \
	intern/imbuf_patch.h \
	intern/iris.c \
	intern/jpeg.c \
	intern/matrix.h \
	intern/png_decode.c \
	intern/png_encode.c \
	intern/readimage.c \
	intern/rectop.c \
	intern/rotate.c \
	intern/scaling.c \
	intern/targa.c \
	intern/util.c \
	intern/writeimage.c

INCLUDES = -I$(top_srcdir)/source/blender/makesdna \
	-I$(top_srcdir)/intern/guardedalloc \
	-I$(top_srcdir)/source/blender/blenlib \
	-I$(top_srcdir)/source/blender/avi

EXTRA_DIST = \
	Makefile \
	intern/Makefile
