noinst_LTLIBRARIES = libblender_img.la

LIBS =

libblender_img_la_SOURCES = \
	IMG_Api.h \
	intern/IMG_Api.cpp \
	intern/IMG_BrushRGBA32.cpp \
	intern/IMG_BrushRGBA32.h \
	intern/IMG_CanvasRGBA32.cpp \
	intern/IMG_CanvasRGBA32.h \
	intern/IMG_Color.h \
	intern/IMG_Line.cpp \
	intern/IMG_Line.h \
	intern/IMG_MemPtr.h \
	intern/IMG_Pixmap.cpp \
	intern/IMG_Pixmap.h \
	intern/IMG_PixmapRGBA32.cpp \
	intern/IMG_PixmapRGBA32.h \
	intern/IMG_Rect.cpp \
	intern/IMG_Rect.h \
	intern/IMG_Types.h

EXTRA_DIST = \
	Makefile \
	intern/Makefile
